<resources>
    <string name="app_name">FCI Blood Donation</string>
    <string name="action_settings">Settings</string>
    <string name="requestTitle">Requests</string>
    <string-array name="Gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="aboutdes">পড়াশুনার পাশাপাশি মানবিক ডাকে সাড়া দিতেও জুড়ি নেই ফেনী কম্পিউটার ইন্সটিটিউটের শিক্ষার্থীদের। ফেনী জেলার মধ্যে প্রচুর সংখ্যক রক্তের চাহিদা মিটাতে প্রতিনিয়ত কাজ করে যাচ্ছে আমাদের ব্লাড ডোনেশান গ্রুপ।ইন্সটিটিউটের প্রায় সকল শিক্ষক এবং শিক্ষার্থী যারা রক্তদানে সক্ষম তারা সকলেই প্রতি ৪ মাস পর  রক্তদান করে মানবিক ডাকে সাড়া প্রদান করে।পৃথিবীর মানুষরা যখন বর্বরতার দিকে ধাবিত হচ্ছে তখন আমাদের ব্লাড ডোনেশান গ্রুপ কাজ করে যাচ্ছে মানুষের জীবন বাঁচাতে।শুধুমাত্র রক্তদান নয়, সেটার পাশাপাশি বিভিন্ন মানবিক কাজেও সহায়তা করছে এই গ্রুপের সদস্যরা। যার মধ্যে রয়েছে সুবিধা বঞ্চিতদের মাঝে ঈদ বস্ত্র বিতরণ, বিনামূল্যে রক্তের গ্রুপ নির্ণয় কর্মসূচী, বিভিন্ন দিবসে স্বেচ্ছায় রক্তদান, বৃক্ষ রোপণ অভিযান, সাধারণ শিক্ষার্থীদের মাঝে রক্ত বিষয় সচেতনতা সৃষ্টি, সবার  মাঝে দেশ প্রেম তৈরি করা সহ মানব হিতৈষী বিভিন্ন কার্যক্রম পরিচালনা করছে এই সংগঠন।এছাড়া যে কোন জাতীয় বিপর্যয় (যেমন বন্যা বা প্রাকৃতিক দুর্যোগে) সৃষ্টি হলে গ্রুপের স্বেচ্ছাসেবকরা কাজ করে দেশের স্বার্থে।নিজের পকেটের টাকায়, নিজের শারীরিক শ্রমের মাধ্যমে দেশ প্রেম ও শৃঙ্খলাকে পুঁজি করে  মানষ তথা মানবতার জন্যে কাজ করে যাচ্ছে FCI Bloood Donation Group
</string>

    <string name="masud">
Name :Kazi Abdullah al Masud\n
President of FCI Blood Donation Group\n
Dep. : CST\n
Batch : 11th\n
Phone: 01876155755\n
    </string>
    <string name="mehedi">Name : Sanaul Azim Mehedi\n
Vice President of FCI Blood Donation Group.\n
Dep. : DNT\n
Batch : 11th\n
Phone: 01851994602\n  </string>
    <string name="shakib">Name : Shuaib khan Shakib\n
Vice President of FCI Blood Donation Group.\n
Dep. : CST\n
Batch : 11th\n
Phone: 01836205740\n
</string>
    <string name="rimon">Name : Kazi Mobarok hosen Rimon\n
Vice President of FCI Blood Donation Group.\n
Dep. : CST\n
Batch : 11th\n
Phone: 01833809145\n </string>
    <string name="fahim">Name : Fahim siddique\n
Secretary of FCI Blood Donation Group.\n
Dep. : TCT\n
Batch : 1st\n
Phone: 01869447682\n </string>
    <string name="fact1">রক্তের জন্যে রিকুয়েস্ট আসলে করণীয়</string>
    <string name="fact2">বর্তমানে সারাদেশে প্রতিনিয়ত নতুন স্বেচ্ছাসেবক এবং সংগঠনের আবির্ভাব হচ্ছে। প্রথমেই তাদের সবাইকে স্বাগত জানাই এবং ভালোবাসা জানাই আপনাদের, সেই সাথে কামনা করি দেশের প্রতিটি ঘরে জন্মনিক রক্তদাতা এবং স্বেচ্ছাসেবক। তাহলেই পরিবর্তন হয়ে যাবে আমাদের প্রিয় মাতৃভূমির চেহারা।</string>

    <string name="fact3">ধরেন কেউ আপনাকে রক্তের জন্যে কল দিল বা রিকুয়েস্ট করল, তখন আপনি তার থেকে কিছু বিষয় জেনে নিবেন।
* রুগীর রক্তের গ্রুপ কি?
*রক্ত কত ব্যাগ লাগবে? কোথায় লাগবে? কখন লাগবে?
* রুগীর প্রবলেম কি? (মানে রক্ত কেন লাগবে)
* যে আপনাকে কল করেছে বা রিকুয়েস্ট করেছে সে রুগীর কি হয় সেটা জেনে নিবেন, কারণ এখন দালালরা বিভিন্ন স্বেচ্ছাসেবককে ফোন করে , আর আমরা স্বেচ্ছায় রক্ত দেয় কিন্ত মাঝে দিয়ে সে টাকা খায়। সুতরাং রুগীর লোকের সাথে ছাড়া কারো সাথে কথা বলে ব্লাড দিবেন না। রুগীর লোক বলতে হাসপাতালে যে রুগীর পাশে আছে একমাত্র তার কথা গ্রহণযোগ্য হবে।
</string>
    <string name="fact4">* রুগীর হিমোগ্লোবিন কত আছে জেনে নিবেন। (হিমোগ্লোবিন নিয়ে অন্য পোস্টে বিস্তারিত জানাব ইনশাআল্লাহ)
* আরেকটা জিনিস জেনে নিবেন রুগীর লোক আপনার ফোন নাম্বার কোথায় পেয়েছে। কারণ এখানেও অনেক সময় দালালেরা চালাকি করে নিজে কল না করে রুগীর লোককে দিয়ে কল করায় .</string>
    <string name="fact5">কত মাস পর পর রক্ত দেয়া যায়?</string>
    <string name="fact6">আমার প্রথম কথা হচ্ছে অন্য মানুষকে বাচাতে যেয়ে নিজে মরার মাঝে কোন যুক্তি নাই। কথা টা কেন বলছি তার উত্তর একটু পরে দিচ্ছি।
রক্তের অন্যতম উপাদান লোহিত কণিকা (রেড ব্লাড সেল) ১২০ দিন পর পর প্রতিস্থাপিত হয়। অর্থাৎ এক একটি লোহিত কণিকা ১২০ দিন বাঁচে। আপনি রক্ত দিন বা না দিন ১২০ দিন পর সেটি মরে যায় এবং নতুন লোহিত কণিকা জন্ম নেয়।
</string>
    <string name="fact8">৪ মাস না হলে আপনার রক্ত কণিকা গুলি পরিপূর্ণ হবেনা , ফলে আপনি যদি টানা রক্ত দিয়েই যান দীর্ঘদিন নিয়ম না মেনে তবে আপনার নিজের রক্তসল্পতা সৃষ্টি হতে পারে। তাই বিশেষ ইমারজেন্সি ছাড়া ৪ মাস পূর্ণ না হলে রক্ত দেয়া উচিৎ না।মনে রাখবেন যদি রক্ত দান করতে করতে যদি পরে আপ্নাকেই রক্ত দিতে হয় তবে আপনার এই রক্তদানের কোন মূল্য নাই।</string>
    <string name="fact7">রক্তের অন্যান্য কণিকার আয়ুষ্কাল আরো কম। ১৮ থেকে ৬০ বছর বয়সী যে কোনো সুস্থ, নিরোগ মানুষ (পুরুষের ক্ষেত্রে ওজন কমপক্ষে ৪৮ কেজি, মেয়েদের ক্ষেত্রে ৪৫ কেজি) প্রতি ৪ মাস পর পর ১ ব্যাগ রক্ত (৪৫০ মিলিলিটার) দিতে পারেন, এতে তেমন শারীরিক ক্ষতির কোনো সম্ভাবনা নেই। এখন প্রশ্ন হচ্ছে চার মাস না হলে রক্ত দিলে শরীরের কি ক্ষতি হতে পারে?</string>
    <string name="fact9">এভাবে সময় না হলে রক্ত দিলে আরো অনেক ক্ষতি হতে পারে, সুতরাং সাবধান।
নিয়ম ভেঙ্গে অপরিপক্ব রক্ত কণিকা দানে ডোনারের ক্ষতি তো হয় ই, তার সাথে রোগিরও পরোক্ষ ক্ষতি হয়ে থাকে যা সবাই বুঝে না। অপরিপক্ব রক্তকোষ দান করলে রোগির জন্য যে পরিমাণ উপাদান পাওয়ার কথা, তা তারা পায় না। অনেক ক্ষেত্রে যেখানে ১ ব্যাগ এ হয়ে যেতো, সেখানে ২ব্যাগ ব্লাড লাগছে। রোগির হিমোগ্লোবিন, সেল কাউন্ট আশানুরূপ বাড়ছে না।
৩টি হ্যাঁ এক ব্যাগ রক্তদানের পূর্বশর্ত।</string>
    <string name="fact10">প্রথম হ্যাঁ : বয়স
রক্তদানের বয়স সীমা দেশ ভেদে ভিন্ন হয়। সাধারণত ১৭ থেকে ৬৫ বছর বয়সকে রক্তদানের জন্য উপযুক্ত বলে ধরে নেয়া হয়। তবে কিছু কিছু দেশে ১৬ বছর বয়সকেও রক্তদানের জন্য গ্রহণযোগ্য বলে বিবেচনা করা হয়। আমাদের দেশে এই সীমা ১৮ থেকে ৬০ বছর।
দ্বিতীয় হ্যাঁ : সুস্বাস্থ্য
একজন সুস্বাস্থ্যের অধিকারী ৪৮ কেজি বা তার বেশি ওজনের ব্যক্তি রক্তদানের জন্য যোগ্য বিবেচিত হবেন।</string>
    <string name="fact11">তৃতীয় হ্যাঁ : স্বদিচ্ছা
একটি মাত্র স্বদিচ্ছা, এক মুহূর্তের জন্য সামান্য সূচঁ ফুটানোর অমূলক ভীতি দূর আক্ষরিক অর্থেই বাচাঁতে পারে একটি জীবন।
একজন সুস্থ্য সবল মানুষের রক্তদান না করার অর্থই হচ্ছে একজন অসুস্থ্য মুমূর্ষু মানুষকে পৃথিবীতে বাঁচার অধিকারকে না বলা।
তাই স্বেচ্ছাসেবীদের প্রতি আহ্বান কারো আবেগ কে প্রশ্রয় দিয়ে , অথবা নিজের বোকামির মাধ্যমে কখনোই কোন ডোনার কে বিপদে ফেলবেন না প্লীজ।</string>


    <string name="shamimabout">
        Name: Shamim Ahmed \n
        Computer Science and Technology,\n
        Feni Computer Institute\n
        Batch: 11th\n
        Phone:01879713588\n
        Email:shamim04091997@gmail.com
    </string>
    <string name="abdullah">
        Name : Abdullah Jubayer\n
        Computer Science and Technology\n
        Feni Computer Institute\n
        Batch: 11th\n
        Phone: 01770154984\n
        Email: abdullah38@gmail.com\n
    </string>


</resources>
