<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".Contract">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/masud"
                />


            <LinearLayout
                android:weightSum="5"
                android:layout_width="match_parent"
                android:background="@drawable/bg"
                android:layout_height="60dp">


                <!--    <Button
                  android:id="@+id/btn1"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:background="#fafafa"
                  android:layout_height="wrap_content" />
      -->
                <Button
                    android:id="@+id/CallBtnId1"
                    android:layout_width="0dp"
                    android:layout_marginLeft="90dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/phone_ic"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/emailBtnId1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_email_black_24dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/messageBtnId1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/ic_message_black_24dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/mehedi"
                />

            <LinearLayout
                android:weightSum="5"
                android:layout_width="match_parent"
                android:background="@drawable/bg"
                android:layout_height="60dp">


                <!--    <Button
                  android:id="@+id/btn1"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:background="#fafafa"
                  android:layout_height="wrap_content" />
      -->
                <Button
                    android:id="@+id/CallBtnId2"
                    android:layout_width="0dp"
                    android:layout_marginLeft="90dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/phone_ic"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/emailBtnId2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_email_black_24dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/messageBtnId2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/ic_message_black_24dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/shakib"
                />

            <LinearLayout
                android:weightSum="5"
                android:layout_width="match_parent"
                android:background="@drawable/bg"
                android:layout_height="60dp">


                <!--    <Button
                  android:id="@+id/btn1"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:background="#fafafa"
                  android:layout_height="wrap_content" />
      -->
                <Button
                    android:id="@+id/CallBtnId3"
                    android:layout_width="0dp"
                    android:layout_marginLeft="90dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/phone_ic"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/emailBtnId3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_email_black_24dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/messageBtnId3"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/ic_message_black_24dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/rimon"
                />

            <LinearLayout
                android:weightSum="5"
                android:layout_width="match_parent"
                android:background="@drawable/bg"
                android:layout_height="60dp">


                <!--    <Button
                  android:id="@+id/btn1"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:background="#fafafa"
                  android:layout_height="wrap_content" />
      -->
                <Button
                    android:id="@+id/CallBtnId4"
                    android:layout_width="0dp"
                    android:layout_marginLeft="90dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/phone_ic"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/emailBtnId4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_email_black_24dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/messageBtnId4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/ic_message_black_24dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/fahim"
                />

            <LinearLayout
                android:weightSum="5"
                android:layout_width="match_parent"
                android:background="@drawable/bg"
                android:layout_height="60dp">


                <!--    <Button
                  android:id="@+id/btn1"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:background="#fafafa"
                  android:layout_height="wrap_content" />
      -->
                <Button
                    android:id="@+id/CallBtnId5"
                    android:layout_width="0dp"
                    android:layout_marginLeft="90dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/phone_ic"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/emailBtnId5"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_email_black_24dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/messageBtnId5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/ic_message_black_24dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>



        </LinearLayout>
    </ScrollView>



   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="#000"
        />
-->

</LinearLayout>


